# ur_toolkit

./: .env  .flake8  HAND_EYE_CALIBRATION_GUIDE.md  README.md  debug_apriltag.py  debug_visual_servo.yaml  detect_tags.py  minimal_servo_test.yaml  pyproject.toml  reset_test_no_servo.yaml  run_hand_eye_calibration.py  simple_hand_eye_calibration.py  test_coordinate_frame.py  test_simple_servo.py
.github/: copilot-instructions.md
config/: config.yaml
docs/: APRILTAG_REVIEW.md  APRILTAG_WORKFLOW.md  APRILTAG_WORKFLOW_SIMPLE.md  CHANGELOG.md  CONFIGURATION_GUIDE.md  ENHANCED_POSITION_TEACHING.md
documentation/: CHANGELOG.md  POSITION_TEACHING.md  WORKFLOW_SYSTEM.md
examples/workflows/: simple_visual_servo_test.yaml  visual_servo_test.yaml
pi_cam_server/: camera_server.py  install.sh
positions/: teach_positions.py
robots/ur/: ur_controller.py
scripts/: run_hand_eye_calibration.py  run_workflow.py  teach_positions.py
setup/: config.yaml  config_manager.py  requirements.txt  setup_venv.sh
src/ur_toolkit/: apriltag_detection.py  config_manager.py
src/ur_toolkit/camera_calibration/: calculate_camera_intrinsics.py  capture_calibration_photos.py
src/ur_toolkit/hand_eye_calibration/: hand_eye_calibration.json  hand_eye_calibrator.py
src/ur_toolkit/positions/: taught_positions.yaml  (+1 more)
tests/: debug_apriltag.py  live_robot_monitor.py  rotations_cli.py  test_camera_capture.py  test_ur_robot.py  test_visual_servo.py
visual_servo/: __init__.py  config.py
workflow/: run_workflow.py  workflow_executor.py
workflow/examples/: sample_workflow.yaml  test_move_types.yaml
(+9 files in other folders)
