[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ur_toolkit"
version = "0.1.0"
description = "A comprehensive Python toolkit for robot control, computer vision, and workflow automation with Universal Robots"
readme = "README.md"
license = {file = "LICENSE"}
authors = [
    {name = "AccelerationConsortium"},
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
]
requires-python = ">=3.8"
dependencies = [
    "numpy",
    "opencv-python",
    "pyyaml",
    "requests",
    "ur-rtde",
    "apriltag",
    "scipy",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "pytest-cov",
    "flake8",
    "black",
]

[project.scripts]
teach-positions = "ur_toolkit.scripts.teach_positions:main"
run-workflow = "ur_toolkit.scripts.run_workflow:main"

[project.urls]
Homepage = "https://github.com/AccelerationConsortium/ur_toolkit"
Repository = "https://github.com/AccelerationConsortium/ur_toolkit"
Documentation = "https://github.com/AccelerationConsortium/ur_toolkit/tree/main/docs"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
ur_toolkit = ["*.yaml", "*.yml"]